// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConceptContentNavigatorStepper should match previous snapshot (with isCurrent prop set to true) 1`] = `
<styled.button
  isCurrent={true}
  label="test"
  onClick={[MockFunction]}
/>
`;

exports[`ConceptContentNavigatorStepper should match previous snapshot 1`] = `
<styled.button
  isCurrent={false}
  label="test"
  onClick={[MockFunction]}
/>
`;
